request redraw when resizing window. bug 35450. r=joki